bynkc/tests/fixtures/positive/385_system_wire_rejection/src/shop/api.bynk
context shop.api

type UserId = String where NonEmpty
actor User { auth = Bearer(secret = "AUTH_SECRET"), identity = UserId }

type Sku = String where NonEmpty
type Item = { sku: Sku }

agent Cart {
  key owner: UserId
  store items: Map[String, Item]

  on call add(item: Item) -> Effect[Item] {
    let _ <- items.put(item.sku, item)
    item
  }
}

service api from http {
  on POST("/cart") (body: Item) -> Effect[HttpResult[Item]] by u: User {
    let saved <- Cart(u.identity).add(body)
    Created(saved)
  }
  on POST("/reject") (body: Item) -> Effect[HttpResult[Item]] by u: User {
    BadRequest("the handler ran and rejected it")
  }
  on PUT("/cart/:sku") (sku: Sku, body: Item) -> Effect[HttpResult[Item]] by u: User {
    Created(body)
  }
}
