bynkc/tests/fixtures/negative/229_refinement_predicate_unsupported/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Bearer(secret = "S"), identity = UserId }
actor Admin = User where isAdmin(user)

service api from http {
  on GET("/x") () -> Effect[HttpResult[String]] by a: Admin {
    Ok("x")
  }
}
